# adjustments_for_vsc

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: cd.yml
bindings/: InterfaceBindings.cpp
bindings/dd/: DDSimDebugBindings.cpp
docs/: debugging.md
include/backend/: debug.h
include/backend/dd/: DDSimDebug.hpp
python/mqt/debugger/: pydebugger.pyi
python/mqt/debugger/dap/: dap_server.py
python/mqt/debugger/dap/messages/: __init__.py  set_variable_dap_message.py
src/backend/dd/: DDSimDebug.cpp
test/: test_data_retrieval.cpp
test/python/: test_python_bindings.py
