# Copyright (c) 2024 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[build-system]
requires = [
  "pybind11>=3.0.1",
  "setuptools-scm>=9.2.2",
  "scikit-build-core>=0.11.6",
]
build-backend = "scikit_build_core.build"

[project]
name = "mqt-debugger"
description = "A quantum circuit debugging tool"
readme = "README.md"
authors = [
    { name = "Damian Rovara", email = "damian.rovara@tum.de" },
    { name = "Lukas Burgholzer", email = "burgholzer@me.com" }
]
keywords = ["MQT", "quantum-computing", "design-automation", "verification", "debugging", "dap"]
license = "MIT"
license-files = [ "LICENSE.md" ]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
check = [
    "qiskit>=1.2.4",
    "scipy>=1.13.1; python_version < '3.13'",
    "scipy>=1.15; python_version >= '3.13'",
    "scipy>=1.16.2; python_version >= '3.14'",
    "numpy>=2.1; python_version >= '3.13'",
    "numpy>=2.3.2; python_version >= '3.14'",
]

[project.scripts]
mqt-debugger-check = "mqt.debugger.check.runtime_check:main"

[project.urls]
Homepage = "https://github.com/munich-quantum-toolkit/debugger"
Documentation = "https://mqt.readthedocs.io/projects/debugger"
Issues = "https://github.com/munich-quantum-toolkit/debugger/issues"
Discussions = "https://github.com/munich-quantum-toolkit/debugger/discussions"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/debugger"

# Explicitly set the package directory
wheel.packages = ["python/mqt"]

ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Only install the Python package component
install.components = ["mqt-debugger_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/mqt/debugger/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.check-sdist]
sdist-only = ["python/mqt/debugger/_version.py"]
git-only = [
    "docs/*",
    "test/*",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_DEBUGGER_BINDINGS = "ON"
BUILD_MQT_DEBUGGER_TESTS = "OFF"
BUILD_MQT_DEBUGGER_APP = "OFF"


[tool.setuptools_scm]
write_to = "python/mqt/debugger/_version.py"


[tool.pytest]
minversion = "9.0"
testpaths = ["test/python"]
strict = true
addopts = [
  "-ra",
  "--showlocals",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
log_level = "INFO"
filterwarnings = [
    "error",
    'ignore:\s.*Pyarrow.*:DeprecationWarning:',
    'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
]


[tool.coverage]
run.source = ["mqt.debugger"]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
]
run.disable_warnings = [
    "no-sysmon",
]


[tool.mypy]
files = ["python/mqt", "test/python"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/python"]
python_version = "3.10"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "matplotlib.*", "pytest_console_scripts.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 120
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PD",          # pandas-vet
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TC",          # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101",    # Use of assert detected
    "S404",    # `subprocess` module is possibly insecure
]
future-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["mqt.debugger"]

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "PYI021"]  # pydocstyle
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
[tool.typos.default.extend-words]
wille = "wille"
anc = "anc"
mch = "mch"


[tool.repo-review]
ignore = ["GH200"]


[tool.uv]
required-version = ">=0.5.20"
reinstall-package = ["mqt.debugger"]
# symengine>=0.11,<0.14 (optional dependency of qiskit) is incompatible with Python 3.14
override-dependencies = [
    "symengine>=0.11,<0.14; python_version < '3.14'",
    "symengine>=0.14.1; python_version >= '3.14'",
]

[tool.uv.sources]
mqt-debugger = { workspace = true }


[tool.cibuildwheel]
build = "cp3*"
skip = ["*-musllinux_*", "cp313t-*"]
archs = "auto64"
test-command = "python -c \"from mqt import debugger\""
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
test-skip = [
  "cp3??t-*", # no freethreading qiskit wheels
  "cp*-win_arm64", # no numpy, qiskit, ... wheels
]


[tool.cibuildwheel.linux]
environment = { DEPLOY = "ON" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.11.2"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt --ignore-existing"


[dependency-groups]
build = [
    "pybind11>=3.0.1",
    "setuptools-scm>=9.2.2",
    "scikit-build-core>=0.11.6",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-console-scripts>=1.4.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]
docs = [
    "breathe>=4.36.0",
    "furo>=2025.09.25",
    "graphviz>=0.21.0",
    "myst-nb>=1.3.0",
    "openqasm-pygments>=0.2.0",
    "pandas[output-formatting]>=2.1.2",
    "setuptools-scm>=9.2.2",
    "sphinx>=8.1.3",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-hoverxref>=1.4.2",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinxcontrib-svg2pdfconverter>=1.3.0",
    "sphinxext-opengraph>=0.10.0",
    "qiskit[qasm3-import,visualization]>=1.0.0",
]
dev = [
    {include-group = "build"},
    {include-group = "test"},
    "nox>=2025.11.12",
]
